--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,23 +6,34 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#87CEEB"
+    android:background="#D6AB87"
     tools:context=".HomeActivity">
 
     <TextView
-        android:textSize="80sp"
-        android:textColor="#021C68"
+        android:paddingLeft="10dp"
+        android:textSize="30sp"
+        android:textColor="#512500"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID : "
+        android:id="@+id/idLableTV"
+        android:layout_alignParentTop="true"
+        />
+
+    <TextView
+        android:textSize="30sp"
+        android:textColor="#512500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
-        android:id="@+id/counter"
-        android:layout_centerHorizontal="true"
+        android:id="@+id/idValueTV"
+        android:layout_toRightOf="@+id/idLableTV"
         android:layout_alignParentTop="true"
         />
 
     <TextView
         android:textSize="40sp"
-        android:textColor="#021C68"
+        android:textColor="#512500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
@@ -50,7 +61,7 @@
 
     <TextView
         android:textSize="45sp"
-        android:textColor="#021C68"
+        android:textColor="#512500"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
@@ -83,14 +94,14 @@
         android:layout_height="1dp"
         android:id="@+id/firstHLine"
         android:layout_marginBottom="20dp"
-        android:background="#E5E3DF"/>
+        android:background="#512500"/>
 
     <Button
         android:layout_alignParentStart="true"
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -104,8 +115,8 @@
     <Button
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
