--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,19 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="#87CEEB"
+        android:background="#D6AB87"
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
        <LinearLayout
+           android:layout_margin="10dp"
+           android:padding="10dp"
+           android:background="#FFF5EC"
            android:id="@+id/linearOne"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
-               android:textColor="#550000"
+               android:textColor="#6B5644"
                android:id="@+id/adminName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
@@ -35,8 +38,8 @@
             <Button
                 android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#ffffff"
-                android:background="#550000"
+                android:textColor="#FFF5EC"
+                android:background="#512500"
                 android:onClick="scanQRCode"
                 android:id="@+id/button1"
                 android:layout_width="match_parent"
@@ -46,19 +49,19 @@
             <Button
                 android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#ffffff"
-                android:background="#550000"
+                android:textColor="#FFF5EC"
+                android:background="#512500"
                 android:onClick="scanCard"
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="Electornic Card Scanner"/>
+                android:text="Smart Card Scanner"/>
             <Button
                 android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#ffffff"
-                android:background="#550000"
+                android:textColor="#FFF5EC"
+                android:background="#512500"
                 android:onClick="scanVoice"
                 android:id="@+id/button3"
                 android:layout_width="match_parent"
