--- a/app/src/main/res/layout/activity_scan_card.xml
+++ b/app/src/main/res/layout/activity_scan_card.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#87CEEB"
+    android:background="#D6AB87"
     tools:context="com.vaiotech.attendaceapp.ScanCardActivity">
 
     <TextView
