--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#B2DFEE"
+    android:background="#D6AB87"
     tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity">
 
     <TextView
@@ -55,7 +55,7 @@
         android:maxLength="2"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#00E9E9"
+        android:textColor="#FFF5EC"
         android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         android:textStyle="bold"
         android:textSize="100sp"
         android:gravity="center"
-        android:textColor="#00E9E9"
+        android:textColor="#FFF5EC"
         android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -103,8 +103,8 @@
         android:layout_alignParentStart="true"
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -118,8 +118,8 @@
     <Button
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
