--- a/app/src/main/res/layout/activity_scan_card_selection.xml
+++ b/app/src/main/res/layout/activity_scan_card_selection.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#87CEEB"
+    android:background="#D6AB87"
     tools:context="com.vaiotech.attendaceapp.ScanCardSelectionActivity">
 
     <ImageView
@@ -34,8 +34,8 @@
         <Button
             android:textSize="30dp"
             android:layout_margin="5dp"
-            android:textColor="#ffffff"
-            android:background="#550000"
+            android:textColor="#FFF5EC"
+            android:background="#512500"
             android:onClick="singleScan"
             android:id="@+id/singleScanButton"
             android:layout_width="0dp"
@@ -45,8 +45,8 @@
         <Button
             android:textSize="30dp"
             android:layout_margin="5dp"
-            android:textColor="#ffffff"
-            android:background="#550000"
+            android:textColor="#FFF5EC"
+            android:background="#512500"
             android:onClick="batchScan"
             android:id="@+id/batchScanButton"
             android:layout_width="0dp"
