--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -6,18 +6,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#B2DFEE"
+    android:background="#D6AB87"
     tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity">
 
     <TextView
+        android:paddingLeft="10dp"
+        android:textSize="30sp"
+        android:textColor="#512500"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID : "
+        android:id="@+id/idLableTV"
+        android:layout_alignParentTop="true"
+        />
+
+    <TextView
+        android:textSize="30sp"
+        android:textColor="#512500"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:id="@+id/idValueTV"
+        android:layout_toRightOf="@+id/idLableTV"
+        android:layout_alignParentTop="true"
+        />
+
+    <TextView
         android:textSize="40sp"
-        android:textColor="#344152"
+        android:textColor="#512500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
         android:id="@+id/timeTV"
-        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/hhET"
+        android:layout_above="@+id/firstHLine"
+        android:layout_marginRight="15dp"
         />
 
     <EditText
@@ -26,24 +49,25 @@
         android:textSize="45sp"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#00E9E9"
-        android:background="#344152"
+        android:textColor="#E81B11"
+        android:background="#080807"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hhET"
         android:maxLength="2"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/firstHLine"
         android:layout_centerHorizontal="true"
         />
 
     <TextView
         android:textSize="45sp"
-        android:textColor="#021C68"
+        android:textColor="#512500"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
+        android:layout_above="@+id/firstHLine"
         android:id="@+id/seperateTimeTV"
         android:layout_toRightOf="@+id/hhET"
         android:textStyle="bold" />
@@ -55,50 +79,30 @@
         android:maxLength="2"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#00E9E9"
-        android:background="#344152"
+        android:textColor="#E81B11"
+        android:background="#080807"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mmET"
+        android:layout_above="@+id/firstHLine"
         android:layout_toRightOf="@+id/seperateTimeTV"
         />
 
     <View
-        android:layout_margin="10dp"
-        android:layout_below="@+id/mmET"
+        android:layout_above="@+id/getInfoBUTTON"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/firstHLine"
-        android:layout_marginBottom="10dp"
-        android:background="#000000"/>
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#512500"/>
 
-    <TextView
-        android:layout_below="@+id/firstHLine"
-        android:layout_marginLeft="20dp"
-        android:textSize="20sp"
-        android:textColor="#344152"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Id : "
-        android:id="@+id/cardIdLableTV"
-    />
-
-    <TextView
-        android:layout_toRightOf="@+id/cardIdLableTV"
-        android:layout_below="@+id/firstHLine"
-        android:textSize="20sp"
-        android:textColor="#344152"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12456789"
-        android:id="@+id/cardIdValueTV"
-        />
 
     <Button
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -112,8 +116,8 @@
         android:layout_alignParentStart="true"
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -127,8 +131,8 @@
     <Button
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#B9C6ED"
-        android:background="#021C68"
+        android:textColor="#FFF5EC"
+        android:background="#512500"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
