--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:paddingLeft="10dp"
+        android:paddingRight="0dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
@@ -195,7 +196,8 @@
     <TextView
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
-        android:textSize="30sp"
+        android:paddingRight="0dp"
+        android:textSize="22sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -206,7 +208,7 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:textSize="30sp"
+        android:textSize="22sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -216,7 +218,31 @@
         android:layout_below="@+id/seperateDateMMTV"
         />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="0dp"
+        android:textSize="22sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name : "
+        android:id="@+id/userNameLableTV"
+        android:layout_below="@+id/idLableTV"
+        />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="22sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/userNameValueTV"
+        android:layout_toRightOf="@+id/userNameLableTV"
+        android:layout_toEndOf="@+id/userNameLableTV"
+        android:layout_below="@+id/idLableTV"
+        />
 
 
     <View
