--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,11 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="#C6D9F1"
+        android:background="#009655"
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
        <LinearLayout
-           android:weightSum="4"
+           android:weightSum="3"
            android:layout_alignParentTop="true"
            android:id="@+id/mainLinearLayout"
            android:layout_width="fill_parent"
@@ -56,58 +56,74 @@
                    </RadioGroup>
                </LinearLayout>
 
-           <LinearLayout
-               android:layout_margin="5dp"
-               android:layout_weight="1"
-               android:orientation="horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_gravity="center_horizontal">
-                    <Button
-                        android:textSize="25sp"
-                        android:textColor="#FFF5EC"
-                        android:background="#353535"
-                        android:onClick="scanQRCode"
-                        android:id="@+id/button1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Start QR Scan"
-                        android:lines="@integer/viewfinder_border_width" />
-                </LinearLayout>
-           <LinearLayout
-               android:layout_margin="5dp"
-               android:layout_weight="1"
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_gravity="center_horizontal">
-                    <Button
-                        android:textSize="25sp"
-                        android:textColor="#FFF5EC"
-                        android:background="#FFC000"
-                        android:onClick="scanCard"
-                        android:id="@+id/button2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Smart Card Scan"
-                        android:lines="@integer/viewfinder_border_length" />
-                </LinearLayout>
-           <LinearLayout
-               android:layout_margin="5dp"
-               android:layout_weight="1"
-               android:orientation="horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_gravity="center_horizontal">
-                    <Button
-                        android:textSize="25sp"
-                        android:textColor="#FFF5EC"
-                        android:background="#92D050"
-                        android:onClick="scanVoice"
-                        android:id="@+id/button3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Start Voice Scan"/>
-                </LinearLayout>
+               <LinearLayout
+                   android:weightSum="2"
+                   android:layout_margin="3dp"
+                   android:layout_weight="1"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:layout_gravity="center_horizontal">
+                        <Button
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:textSize="25sp"
+                            android:textColor="#FFF5EC"
+                            android:background="#1267E9"
+                            android:onClick="scanQRCode"
+                            android:id="@+id/button1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Start QR Scan"
+                            android:lines="@integer/viewfinder_border_width" />
+
+                       <Button
+                           android:layout_margin="3dp"
+                           android:layout_weight="1"
+                           android:textSize="25sp"
+                           android:textColor="#FFF5EC"
+                           android:background="#FFC000"
+                           android:onClick="scanCard"
+                           android:id="@+id/button2"
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:text="Smart Card Scan"
+                           android:lines="@integer/viewfinder_border_length" />
+                    </LinearLayout>
+               <LinearLayout
+                   android:layout_margin="3dp"
+                   android:weightSum="2"
+                   android:layout_weight="1"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:layout_gravity="center_horizontal">
+                        <Button
+                            android:layout_margin="3dp"
+                            android:layout_weight="1"
+                            android:textSize="25sp"
+                            android:textColor="#FFF5EC"
+                            android:background="#953735"
+                            android:onClick="scanVoice"
+                            android:id="@+id/button3"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Start Voice Scan"/>
+
+                       <Button
+                           android:layout_margin="3dp"
+                           android:layout_weight="1"
+                           android:textSize="25sp"
+                           android:textColor="#FFF5EC"
+                           android:background="#953735"
+                           android:onClick="scanVoice"
+                           android:id="@+id/button4"
+                           android:layout_width="match_parent"
+                           android:layout_height="match_parent"
+                           android:text="Manual Entry"/>
+
+                    </LinearLayout>
+               <!--android:background="#92D050" -->
        </LinearLayout>
     </RelativeLayout>
 
