--- a/app/src/main/res/layout/activity_functional_main.xml
+++ b/app/src/main/res/layout/activity_functional_main.xml
@@ -62,7 +62,7 @@
                 android:onClick="smartScan"
                 android:textSize="25sp"
                 android:textColor="#DCE0E5"
-                android:background="#009655"
+                android:background="#89AC3F"
                 android:text="Smart Scan"
                 android:layout_margin="3dp"
                 android:layout_width="fill_parent"
